<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_all_firms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="76dp"
    tools:context="com.example.a02kylebennett.smartmart_kyle_v10.All_Firms">

    <TextView
        android:text="@string/all_firms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView6"
        android:textSize="35sp"
        android:textColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    app:srcCompat="@drawable/affinity"
                    android:id="@+id/imageButton10"
                    android:onClick="Affinity"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:layout_height="102dp"
                    android:contentDescription="@string/affinity" />

                <Button
                    android:text="@string/affinity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button28"
                    android:layout_weight="1"
                    android:onClick="Affinity"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_height="91dp"
                    app:srcCompat="@drawable/dexacorp2"
                    android:id="@+id/imageButton11"
                    android:scaleType="fitXY"
                    android:onClick="DexaCorp"
                    android:layout_width="124dp"
                    android:contentDescription="@string/dexacorp" />

                <Button
                    android:text="@string/dexacorp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button29"
                    android:layout_weight="1"
                    android:onClick="DexaCorp"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_height="152dp"
                    app:srcCompat="@drawable/dte"
                    android:id="@+id/imageButton14"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:contentDescription="@string/down_to_earth" />

                <Button
                    android:text="@string/down_to_earth"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button40"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_height="102dp"
                    app:srcCompat="@drawable/into_the_wild"
                    android:id="@+id/imageButton17"
                    android:onClick="ITW"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:contentDescription="@string/into_the_wild" />

                <Button
                    android:text="@string/into_the_wild"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button47"
                    android:onClick="ITW"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_height="92dp"
                    app:srcCompat="@drawable/lrm"
                    android:id="@+id/imageButton15"
                    android:layout_width="124dp"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/lifestyle_resort_management" />

                <Button
                    android:text="@string/lifestyle_resort_management"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button41"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="124dp"
                    android:layout_height="65dp"
                    app:srcCompat="@drawable/mavco"
                    android:id="@+id/imageButton7"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:scaleType="fitXY"
                    android:onClick="Mavco"
                    android:contentDescription="@string/mavco" />

                <Button
                    android:text="@string/mavco"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button14"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="Mavco" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/skyline"
                    android:id="@+id/imageButton9"
                    android:onClick="Skyline"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/skyline_entertainment"
                    android:layout_width="124dp" />

                <Button
                    android:text="@string/skyline_entertainment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button17"
                    android:onClick="Skyline"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_height="67dp"
                    app:srcCompat="@drawable/smooth_move"
                    android:id="@+id/imageButton6"
                    android:onClick="Smooth_Move"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:contentDescription="@string/smooth_move_mobile_cafe" />

                <Button
                    android:text="@string/smooth_move"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button32"
                    android:layout_weight="1"
                    android:onClick="Smooth_Move"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_height="52dp"
                    app:srcCompat="@drawable/spectrum"
                    android:id="@+id/imageButton8"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:onClick="Spectrum"
                    android:contentDescription="@string/spectrum" />

                <Button
                    android:text="@string/spectrum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button16"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="Spectrum" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    app:srcCompat="@drawable/waybound"
                    android:id="@+id/imageButton13"
                    android:scaleType="fitXY"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:contentDescription="@string/waybound" />

                <Button
                    android:text="@string/waybound"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/button39"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>